--- a/Day43/index.html
+++ b/Day43/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="style.css" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Box</title>
+<link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Animation</title>
 </head>
 <body>
-    <div class="box">
-        <p>Hello</p>
-    </div>
+<div class="container">
+  <div class="navbar">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </div>
+  <div class="content">
+    <p>Directs You To Home Page</p>
+    <p>Directs You To About Page</p>
+  </div>
+</div>
+
 </body>
 </html>
